Toggle points table on mobile + fixes

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
@@ -154,6 +154,7 @@
 .quizzes-list,
 library-list {
   margin-top: 10px;
+  max-width: 100%;
 }
 .members .member-invite {
   color: #212325;
